fix for sidebar overlapping

--- a/assets/themes/supportbee/css/style.css
+++ b/assets/themes/supportbee/css/style.css
@@ -58,7 +58,6 @@ code{
 
 
 .sidebar {
-  position: fixed;
   background-color: #3A3A3A;
   border-radius: 5px;
   padding-top: 20px;
